- grid lines: always show 5 digits; less density to avoid overlap - Lose when going too far north ("you've been captured!") - Separate OKCancel and OK dialogs - updated rules - updated todo

--- a/web/play/styles.css
+++ b/web/play/styles.css
@@ -157,6 +157,7 @@ h2 {
 }
 
 .game-dialog {
+    text-align: center;
     background-color: #0a0f14;
     color: white;
     border: 2px solid lightgrey;
@@ -171,6 +172,8 @@ h2 {
     justify-content: space-between;
     gap: 10px;
     margin-top: 12px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 #directions { 
